# fast_opml

./: .gitignore  README.md  mix.exs
lib/: fast_opml.ex
native/fast_opml/: Cargo.toml  README.md
native/fast_opml/src/: lib.rs
test/: fast_opml_test.exs
