[package]
name = "fast_opml"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "fast_opml"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29"
opml = "1.1.6"
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0-29" }